--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Knot diagram drawing, manipulation, and invariants",
   "main": "src/main.mjs",
   "scripts": {
-    "test": "sh run_tests.sh"
+    "test": "sh run_tests.sh",
+    "start": "NODE_OPTIONS=--max_old_space_size=4096 parcel knotfolio.html"
   },
   "author": "Kyle Miller",
   "license": "GPL-2.0-or-later",
   "browserslist": [
     "last 1 Chrome versions"
-  ]
+  ],
+  "devDependencies": {
+    "cssnano": "^4.1.10"
+  }
 }
